# GenDiff

./: README.md  makefile  pyproject.toml  setup.py
.github/workflows/: test_and_linter.yml
difference_calculator/scripts/: gendiff.py
find_diff/: comparison.py  gendiff.py  unpack_files.py
find_diff/formaters/: formater_json.py  formater_plain.py  formater_stylish.py
find_diff/scripts/: entrance_point.py  pytest.py
find_diff/tests/: tests.py  tests_gendiff_json.py
find_diff/tests/fixtures/: fixtures_json.py
find_diff/tests/fixtures/expected_value/: compare_empty_from_dict.txt  compare_flat_dicts.txt  compare_nested_dicts.txt  compare_same_dicts.txt  convert_flat.txt  convert_nasted.txt  for_js_diff_dict.txt  for_js_not_diff.txt  plain_format.txt  unpack.txt  unpack_js.txt  yaml_file.txt
find_diff/tests/fixtures/passed_values/: diff_dict.txt  not_diff_dict.txt
gendiff/: comparison.py  gendiff.py  unpack_files.py
gendiff.egg-info/: PKG-INFO  SOURCES.txt
gendiff/formaters/: convert_bool.py  formater_json.py  formater_plain.py  formater_stylish.py
gendiff/scripts/: entrance_point.py  gendiff.py
tests/: tests.py
tests/fixtures/expected_value/: compare_empty_from_dict.txt  compare_flat_dicts.txt  compare_nested_dicts.txt  compare_same_dicts.txt  convert_flat.txt  convert_nasted.txt  for_js_diff_dict.txt  for_js_not_diff.txt  for_plain_diff.txt  plain_format.txt  unpack.txt  yaml_file.txt
tests/fixtures/passed_value/: diff_dict.json  not_diff_dict.json
