[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Emil Murzin <emil.morua@gmail.com>"]
readme = "README.md"
packages = [{include = "find_diff"}]

[tool.poetry.dependencies]
python = "^3.10.6"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
yml = "^0.0.1"

[tool.poetry.scripts]
gendiff = "find_diff.scripts.entrance_point:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
