[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Emil Murzin <emil.morua@gmail.com>"]
readme = "README.md"
packages = [{include = "find_diff"}]

[tool.poetry.dependencies]
python = ">=3.10.6,<4.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "find_diff.scripts.entrance_point:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
