[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Emil Murzin <emil.morua@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.entrance_point:main"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
